--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <nav class="menu">
     <ul class="mainSlider">
-        <li><a class="grey" href='#main' data-id="0" data-name="main">Main</a></li>
-        <li><a class="grey" href='#skills' data-id="1" data-name="skills">Skills</a></li>
-        <li><a class="grey" href='#education' data-id="2" data-name="education">Education</a></li>
-        <li><a class="grey" href='#career' data-id="3" data-name="career">Career</a></li>
-        <li><a class="grey" href='#exit' data-id="4" data-name="exit">Exit</a></li>
+        <li><a class="grey" href='#main' data-id="0" data-name="main" data-nameR="mainR">Main</a></li>
+        <li><a class="grey" href='#skills' data-id="1" data-name="skills" data-nameR="skillsR">Skills</a></li>
+        <li><a class="grey" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a></li>
+        <li><a class="grey" href='#career' data-id="3" data-name="career" data-nameR="careerR">Career</a></li>
+        <li><a class="grey" href='#exit' data-id="4" data-name="exit" data-nameR="exitR">Exit</a></li>
     </ul>
 </nav>
 
@@ -42,23 +42,76 @@
             <section class="col-left-side">
 
                 <div id='main'>
-                    <p>Main2</p>
+                    <p class="blue" data-content="name">System Name:</p>
+                    <p class="blue" data-content="date">Creation Date:</p>
+                    <p class="blue" data-content="functionality">System Functionality:</p>
+                    /
+                    <p class="blue" data-content="hobbies">Hobbies Settings:</p>
+                    <p class="blue" data-content="cares">Caring Features:</p>
                 </div>
                 <div id='skills'>
-                    <p>Skills2</p>
+                    <p class="blue" data-content="php">PHP:</p>
+                    <p class="blue" data-content="symfony">Symfony2:</p>
+                    <p class="blue" data-content="mysql">MySQL:</p>
+                    /
+                    <p class="blue" data-content="js">JavaScript:</p>
+                    <p class="blue" data-content="jquery">jQuery:</p>
+                    /
+                    <p class="blue" data-content="html">HTML:</p>
+                    <p class="blue" data-content="css">CSS:</p>
                 </div>
                 <div id='education'>
-                    <p>Education2</p>
+                    <p class="blue" data-content="cl">Coders Lab:</p>
+                    /
+                    <p class="blue" data-content="pader">Paderewski Private School:</p>
                 </div>
                 <div id='career'>
-                    <p>Career2</p>
+                    <p class="blue" data-content="henderson">Henderson's of Edinburgh:</p>
+                    /
+                    <p class="blue" data-content="sawczuk">SAWCZUK:</p>
                 </div>
                 <div id='exit'>
-                    <p>Exit2</p>
+                    <p class="blue" data-content="email">E-Mail:</p>
+                    <p class="blue" data-content="linkedin">LinkedIn:</p>
+                    <p class="blue" data-content="github">GitHub:</p>
                 </div>
             </section>
+
             <section class="col-right-side">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <div id='mainR'>
+                    <p class="blue">[Dawid Sawczuk]</p>
+                    <p class="blue">[11/11/1993]</p>
+                    <p class="blue">[Junior Back-End Developer]</p>
+                    /
+                    <p class="blue">[Enabled]</p>
+                    <p class="blue">[Enabled]</p>
+                </div>
+                <div id='skillsR'>
+                    <p class="blue">[Enabled]</p>
+                    <p class="blue">[Enabled]</p>
+                    <p class="blue">[Enabled]</p>
+                    /
+                    <p class="blue">[Enabled]</p>
+                    <p class="blue">[Enabled]</p>
+                    /
+                    <p class="blue">[Enabled]</p>
+                    <p class="blue">[Enabled]</p>
+                </div>
+                <div id='educationR'>
+                    <p class="blue">[Finished]</p>
+                    /
+                    <p class="blue">[Finished]</p>
+                </div>
+                <div id='careerR'>
+                    <p class="blue">[Waiter]</p>
+                    /
+                    <p class="blue">[Co-Owner]</p>
+                </div>
+                <div id='exitR'>
+                    <p class="blue">[dawid.igor.sawczuk@gmail.com]</p>
+                    <p class="blue">[Link]</p>
+                    <p class="blue">[Link]</p>
+                </div>
             </section>
 
         </div>
@@ -70,8 +123,63 @@
             </div>
 
             <div class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
-                    labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+                <div id="name">
+                    <p>System's given birth name.</p>
+                </div>
+                <div id="date">
+                    <p>System's creation date</p>
+                </div>
+                <div id="functionality">
+                    <p>System's functionality</p>
+                </div>
+                <div id="hobbies">
+                    <p>System's hobbies</p>
+                </div>
+                <div id="cares">
+                    <p>System's cares</p>
+                </div>
+                <div id="php">
+                    <p>System's PHP.</p>
+                </div>
+                <div id="symfony">
+                    <p>System's Symfony.</p>
+                </div>
+                <div id="mysql">
+                    <p>System's MySQL.</p>
+                </div>
+                <div id="js">
+                    <p>System's given birth name.</p>
+                </div>
+                <div id="jquery">
+                    <p>System's given birth name.</p>
+                </div>
+                <div id="html">
+                    <p>System's given birth name.</p>
+                </div>
+                <div id="css">
+                    <p>System's given birth name.</p>
+                </div>
+                <div id="cl">
+                    <p>System's coders lab</p>
+                </div>
+                <div id="pader">
+                    <p>System's given birth name.</p>
+                </div>
+                <div id="henderson">
+                    <p>System's henderson</p>
+                </div>
+                <div id="sawczuk">
+                    <p>System's given birth name.</p>
+                </div>
+                <div id="email">
+                    <p>System's email</p>
+                </div>
+                <div id="linkedin">
+                    <p>System's given birth name.</p>
+                </div>
+                <div id="github">
+                    <p>System's given birth name.</p>
+                </div>
             </div>
 
         </div>
