functionality almost finished

--- a/index.html
+++ b/index.html
@@ -79,38 +79,38 @@
 
             <section class="col-right-side">
                 <div id='mainR'>
-                    <p class="blue">[Dawid Sawczuk]</p>
-                    <p class="blue">[11/11/1993]</p>
-                    <p class="blue">[Junior Back-End Developer]</p>
+                    <p class="black">[Dawid Sawczuk]</p>
+                    <p class="black">[11/11/1993]</p>
+                    <p class="black">[Junior Back-End Developer]</p>
                     /
-                    <p class="blue">[Enabled]</p>
-                    <p class="blue">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
                 </div>
                 <div id='skillsR'>
-                    <p class="blue">[Enabled]</p>
-                    <p class="blue">[Enabled]</p>
-                    <p class="blue">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
                     /
-                    <p class="blue">[Enabled]</p>
-                    <p class="blue">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
                     /
-                    <p class="blue">[Enabled]</p>
-                    <p class="blue">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
+                    <p class="black">[Enabled]</p>
                 </div>
                 <div id='educationR'>
-                    <p class="blue">[Finished]</p>
+                    <p class="black">[Finished]</p>
                     /
-                    <p class="blue">[Finished]</p>
+                    <p class="black">[Finished]</p>
                 </div>
                 <div id='careerR'>
-                    <p class="blue">[Waiter]</p>
+                    <p class="black">[Waiter]</p>
                     /
-                    <p class="blue">[Co-Owner]</p>
+                    <p class="black">[Co-Owner]</p>
                 </div>
                 <div id='exitR'>
-                    <p class="blue">[dawid.igor.sawczuk@gmail.com]</p>
-                    <p class="blue">[Link]</p>
-                    <p class="blue">[Link]</p>
+                    <p class="black">[dawid.igor.sawczuk@gmail.com]</p>
+                    <p class="black">[Link]</p>
+                    <p class="black">[Link]</p>
                 </div>
             </section>
 
@@ -189,7 +189,7 @@
 </div>
 
 <footer class="footer">
-    <div class="icon">F1 <span>Help</span></div>
+    <div class="icon">F2 <span>Help</span></div>
 
     <div class="arrows">↑↓ <span>Select Item</span></div>
 
