media for mobile

--- a/index.html
+++ b/index.html
@@ -26,16 +26,7 @@
 
     <section class="container">
 
-        <!-- <div class="col-left"> -->
-
-        <!-- tu test szczałka -->
-        <div class="mobile-arrow">
-            <div class="arrow">
-                <div class="circle"></div>
-                <div class="triangle"></div>
-            </div>
-        </div>
-        <!--           -->
+        <div class="portrait">Please rotate your device</div>
 
 
         <div class="col-left">
@@ -44,30 +35,30 @@
                 <div id='main'>
                     <p class="blue" data-content="name">System Name:</p>
                     <p class="blue" data-content="date">Creation Date:</p>
-                    <p class="blue" data-content="functionality">System Functionality:</p>
-                    /
+                    <p class="blue margin" data-content="functionality">System Functionality:</p>
+                    <!-- / -->
                     <p class="blue" data-content="hobbies">Hobbies Settings:</p>
                     <p class="blue" data-content="cares">Caring Features:</p>
                 </div>
                 <div id='skills'>
                     <p class="blue" data-content="php">PHP:</p>
                     <p class="blue" data-content="symfony">Symfony2:</p>
-                    <p class="blue" data-content="mysql">MySQL:</p>
-                    /
+                    <p class="blue margin" data-content="mysql">MySQL:</p>
+                    <!-- / -->
                     <p class="blue" data-content="js">JavaScript:</p>
-                    <p class="blue" data-content="jquery">jQuery:</p>
-                    /
+                    <p class="blue margin" data-content="jquery">jQuery:</p>
+                    <!-- / -->
                     <p class="blue" data-content="html">HTML:</p>
                     <p class="blue" data-content="css">CSS:</p>
                 </div>
                 <div id='education'>
-                    <p class="blue" data-content="cl">Coders Lab:</p>
-                    /
+                    <p class="blue margin" data-content="cl">Coders Lab:</p>
+                    <!-- / -->
                     <p class="blue" data-content="pader">Paderewski Private School:</p>
                 </div>
                 <div id='career'>
-                    <p class="blue" data-content="henderson">Henderson's of Edinburgh:</p>
-                    /
+                    <p class="blue margin" data-content="henderson">Henderson's:</p>
+                    <!-- / -->
                     <p class="blue" data-content="sawczuk">SAWCZUK:</p>
                 </div>
                 <div id='exit'>
@@ -81,30 +72,30 @@
                 <div id='mainR'>
                     <p class="black">[Dawid Sawczuk]</p>
                     <p class="black">[11/11/1993]</p>
-                    <p class="black">[Junior Back-End Developer]</p>
-                    /
+                    <p class="black margin">[Junior Back-End Developer]</p>
+                    <!-- / -->
                     <p class="black">[Enabled]</p>
                     <p class="black">[Enabled]</p>
                 </div>
                 <div id='skillsR'>
                     <p class="black">[Enabled]</p>
                     <p class="black">[Enabled]</p>
+                    <p class="black margin">[Enabled]</p>
+                    <!-- / -->
                     <p class="black">[Enabled]</p>
-                    /
-                    <p class="black">[Enabled]</p>
-                    <p class="black">[Enabled]</p>
-                    /
+                    <p class="black margin">[Enabled]</p>
+                    <!-- / -->
                     <p class="black">[Enabled]</p>
                     <p class="black">[Enabled]</p>
                 </div>
                 <div id='educationR'>
-                    <p class="black">[Finished]</p>
-                    /
+                    <p class="black margin">[Finished]</p>
+                    <!-- / -->
                     <p class="black">[Finished]</p>
                 </div>
                 <div id='careerR'>
-                    <p class="black">[Waiter]</p>
-                    /
+                    <p class="black margin">[Waiter]</p>
+                    <!-- / -->
                     <p class="black">[Co-Owner]</p>
                 </div>
                 <div id='exitR'>
