--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>BIOS</title>
@@ -7,192 +8,169 @@
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
 </head>
+
 <body>
-<header class="header">
-    DawidSawczuk Setup Utility
-</header>
-
-<nav class="menu">
-    <ul class="mainSlider">
-        <li><a class="grey" href='#main' data-id="0" data-name="main" data-nameR="mainR">Main</a></li>
-        <li><a class="grey" href='#skills' data-id="1" data-name="skills" data-nameR="skillsR">Skills</a></li>
-        <li><a class="grey" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a></li>
-        <li><a class="grey" href='#career' data-id="3" data-name="career" data-nameR="careerR">Career</a></li>
-        <li><a class="grey" href='#exit' data-id="4" data-name="exit" data-nameR="exitR">Exit</a></li>
-    </ul>
-</nav>
-
-<div class="main">
-
-    <section class="container">
-
-        <div class="portrait">Please rotate your device</div>
-
-
-        <div class="col-left">
-            <section class="col-left-side">
-
-                <div id='main'>
-                    <p class="blue" data-content="name">System Name:</p>
-                    <p class="blue" data-content="date">Creation Date:</p>
-                    <p class="blue margin" data-content="functionality">System Functionality:</p>
-                    <!-- / -->
-                    <p class="blue" data-content="hobbies">Hobbies Settings:</p>
-                    <p class="blue" data-content="cares">Caring Features:</p>
-                </div>
-                <div id='skills'>
-                    <p class="blue" data-content="php">PHP:</p>
-                    <p class="blue" data-content="symfony">Symfony2:</p>
-                    <p class="blue margin" data-content="mysql">MySQL:</p>
-                    <!-- / -->
-                    <p class="blue" data-content="js">JavaScript:</p>
-                    <p class="blue margin" data-content="jquery">jQuery:</p>
-                    <!-- / -->
-                    <p class="blue" data-content="html">HTML:</p>
-                    <p class="blue" data-content="css">CSS:</p>
-                </div>
-                <div id='education'>
-                    <p class="blue margin" data-content="cl">Coders Lab:</p>
-                    <!-- / -->
-                    <p class="blue" data-content="pader">Paderewski Private School:</p>
-                </div>
-                <div id='career'>
-                    <p class="blue margin" data-content="henderson">Henderson's:</p>
-                    <!-- / -->
-                    <p class="blue" data-content="sawczuk">SAWCZUK:</p>
-                </div>
-                <div id='exit'>
-                    <p class="blue" data-content="email">E-Mail:</p>
-                    <p class="blue" data-content="linkedin">LinkedIn:</p>
-                    <p class="blue" data-content="github">GitHub:</p>
-                </div>
-            </section>
-
-            <section class="col-right-side">
-                <div id='mainR'>
-                    <p class="black">[Dawid Sawczuk]</p>
-                    <p class="black">[11/11/1993]</p>
-                    <p class="black margin">[Junior Back-End Developer]</p>
-                    <!-- / -->
-                    <p class="black">[Enabled]</p>
-                    <p class="black">[Enabled]</p>
-                </div>
-                <div id='skillsR'>
-                    <p class="black">[Enabled]</p>
-                    <p class="black">[Enabled]</p>
-                    <p class="black margin">[Enabled]</p>
-                    <!-- / -->
-                    <p class="black">[Enabled]</p>
-                    <p class="black margin">[Enabled]</p>
-                    <!-- / -->
-                    <p class="black">[Enabled]</p>
-                    <p class="black">[Enabled]</p>
-                </div>
-                <div id='educationR'>
-                    <p class="black margin">[Finished]</p>
-                    <!-- / -->
-                    <p class="black">[Finished]</p>
-                </div>
-                <div id='careerR'>
-                    <p class="black margin">[Waiter]</p>
-                    <!-- / -->
-                    <p class="black">[Co-Owner]</p>
-                </div>
-                <div id='exitR'>
-                    <p class="black">[dawid.igor.sawczuk@gmail.com]</p>
-                    <p class="black">[Link]</p>
-                    <p class="black">[Link]</p>
-                </div>
-            </section>
-
-        </div>
-
-        <div class="col-right">
-
-            <div class="top">
-                <p class="top-text">Item Specific Help</p>
+    <header class="header"> DawidSawczuk Setup Utility </header>
+    <nav class="menu">
+        <ul class="mainSlider">
+            <li><a class="grey" href='#main' data-id="0" data-name="main" data-nameR="mainR">Main</a></li>
+            <li><a class="grey" href='#skills' data-id="1" data-name="skills" data-nameR="skillsR">Skills</a></li>
+            <li><a class="grey" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a></li>
+            <li><a class="grey" href='#career' data-id="3" data-name="career" data-nameR="careerR">Career</a></li>
+            <li><a class="grey" href='#exit' data-id="4" data-name="exit" data-nameR="exitR">Exit</a></li>
+        </ul>
+    </nav>
+    <div class="main">
+        <section class="container">
+            <div class="portrait">Please rotate your device</div>
+            <div class="col-left">
+                <section class="col-left-side">
+                    <div id='main'>
+                        <p class="blue" data-content="name">System Name:</p>
+                        <p class="blue" data-content="date">Creation Date:</p>
+                        <p class="blue margin" data-content="functionality">System Functionality:</p>
+                        <!-- / -->
+                        <p class="blue" data-content="hobbies">Hobbies Settings:</p>
+                        <p class="blue" data-content="cares">Caring Features:</p>
+                    </div>
+                    <div id='skills'>
+                        <p class="blue" data-content="php">PHP:</p>
+                        <p class="blue" data-content="symfony">Symfony2:</p>
+                        <p class="blue margin" data-content="mysql">MySQL:</p>
+                        <!-- / -->
+                        <p class="blue" data-content="js">JavaScript:</p>
+                        <p class="blue margin" data-content="jquery">jQuery:</p>
+                        <!-- / -->
+                        <p class="blue" data-content="html">HTML:</p>
+                        <p class="blue" data-content="css">CSS:</p>
+                    </div>
+                    <div id='education'>
+                        <p class="blue margin" data-content="cl">Coders Lab:</p>
+                        <!-- / -->
+                        <p class="blue" data-content="pader">Paderewski Private School:</p>
+                    </div>
+                    <div id='career'>
+                        <p class="blue margin" data-content="henderson">Henderson's:</p>
+                        <!-- / -->
+                        <p class="blue" data-content="sawczuk">SAWCZUK:</p>
+                    </div>
+                    <div id='exit'>
+                        <p class="blue" data-content="email">E-Mail:</p>
+                        <p class="blue" data-content="linkedin">LinkedIn:</p>
+                        <p class="blue" data-content="github">GitHub:</p>
+                    </div>
+                </section>
+                <section class="col-right-side">
+                    <div id='mainR'>
+                        <p class="black">[Dawid Sawczuk]</p>
+                        <p class="black">[11/11/1993]</p>
+                        <p class="black margin">[Junior Back-End Developer]</p>
+                        <!-- / -->
+                        <p class="black">[Enabled]</p>
+                        <p class="black">[Enabled]</p>
+                    </div>
+                    <div id='skillsR'>
+                        <p class="black">[Enabled]</p>
+                        <p class="black">[Enabled]</p>
+                        <p class="black margin">[Enabled]</p>
+                        <!-- / -->
+                        <p class="black">[Enabled]</p>
+                        <p class="black margin">[Enabled]</p>
+                        <!-- / -->
+                        <p class="black">[Enabled]</p>
+                        <p class="black">[Enabled]</p>
+                    </div>
+                    <div id='educationR'>
+                        <p class="black margin">[Finished]</p>
+                        <!-- / -->
+                        <p class="black">[Finished]</p>
+                    </div>
+                    <div id='careerR'>
+                        <p class="black margin">[Waiter]</p>
+                        <!-- / -->
+                        <p class="black">[Co-Owner]</p>
+                    </div>
+                    <div id='exitR'>
+                        <p class="black">[dawid.igor.sawczuk@gmail.com]</p>
+                        <p class="black">[Link]</p>
+                        <p class="black">[Link]</p>
+                    </div>
+                </section>
             </div>
-
-            <div class="content">
-                <div id="name">
-                    <p>System's given birth name.</p>
+            <div class="col-right">
+                <div class="top">
+                    <p class="top-text">Item Specific Help</p>
                 </div>
-                <div id="date">
-                    <p>System's creation date</p>
-                </div>
-                <div id="functionality">
-                    <p>System's functionality</p>
-                </div>
-                <div id="hobbies">
-                    <p>System's hobbies</p>
-                </div>
-                <div id="cares">
-                    <p>System's cares</p>
-                </div>
-                <div id="php">
-                    <p>System's PHP.</p>
-                </div>
-                <div id="symfony">
-                    <p>System's Symfony.</p>
-                </div>
-                <div id="mysql">
-                    <p>System's MySQL.</p>
-                </div>
-                <div id="js">
-                    <p>System's given birth name.</p>
-                </div>
-                <div id="jquery">
-                    <p>System's given birth name.</p>
-                </div>
-                <div id="html">
-                    <p>System's given birth name.</p>
-                </div>
-                <div id="css">
-                    <p>System's given birth name.</p>
-                </div>
-                <div id="cl">
-                    <p>System's coders lab</p>
-                </div>
-                <div id="pader">
-                    <p>System's given birth name.</p>
-                </div>
-                <div id="henderson">
-                    <p>System's henderson</p>
-                </div>
-                <div id="sawczuk">
-                    <p>System's given birth name.</p>
-                </div>
-                <div id="email">
-                    <p>System's email</p>
-                </div>
-                <div id="linkedin">
-                    <p>System's given birth name.</p>
-                </div>
-                <div id="github">
-                    <p>System's given birth name.</p>
+                <div class="content">
+                    <div id="name">
+                        <p>System's given birth name.</p>
+                    </div>
+                    <div id="date">
+                        <p>System's creation date</p>
+                    </div>
+                    <div id="functionality">
+                        <p>System's functionality</p>
+                    </div>
+                    <div id="hobbies">
+                        <p>System's hobbies</p>
+                    </div>
+                    <div id="cares">
+                        <p>System's cares</p>
+                    </div>
+                    <div id="php">
+                        <p>System's PHP.</p>
+                    </div>
+                    <div id="symfony">
+                        <p>System's Symfony.</p>
+                    </div>
+                    <div id="mysql">
+                        <p>System's MySQL.</p>
+                    </div>
+                    <div id="js">
+                        <p>System's given birth name.</p>
+                    </div>
+                    <div id="jquery">
+                        <p>System's given birth name.</p>
+                    </div>
+                    <div id="html">
+                        <p>System's given birth name.</p>
+                    </div>
+                    <div id="css">
+                        <p>System's given birth name.</p>
+                    </div>
+                    <div id="cl">
+                        <p>System's coders lab</p>
+                    </div>
+                    <div id="pader">
+                        <p>System's given birth name.</p>
+                    </div>
+                    <div id="henderson">
+                        <p>System's henderson</p>
+                    </div>
+                    <div id="sawczuk">
+                        <p>System's given birth name.</p>
+                    </div>
+                    <div id="email">
+                        <p>System's email</p>
+                    </div>
+                    <div id="linkedin">
+                        <p>System's given birth name.</p>
+                    </div>
+                    <div id="github">
+                        <p>System's given birth name.</p>
+                    </div>
                 </div>
             </div>
-
-        </div>
-
-    </section>
-
-</div>
-
-<footer class="footer">
-    <div class="icon">F2 <span>Help</span></div>
-
-    <div class="arrows">↑↓ <span>Select Item</span></div>
-
-    <div class="arrows">← → <span>Select Menu</span></div>
-
-    <div class="icon">Enter <span>Select</span></div>
-
-    <div class="icon">Esc <span>Exit</span></div>
-
-    <div class="copyright">&copy; <a target="_blank" href="https://github.com/dawidsawczuk/">Dawid Sawczuk</a> & <a
-            target="_blank" href="https://github.com/Szona">Alicja Cmiel</a></div>
-
-</footer>
+        </section>
+    </div>
+    <footer class="footer">
+        <div class="icon">F2 <span>Help</span></div>
+        <div class="arrows">↑↓ <span>Select Item</span></div>
+        <div class="arrows">← → <span>Select Menu</span></div>
+        <div class="icon">Enter <span>Select</span></div>
+        <div class="icon">Esc <span>Exit</span></div>
+        <div class="copyright">&copy; <a target="_blank" href="https://github.com/dawidsawczuk/">Dawid Sawczuk</a> & <a target="_blank" href="https://github.com/Szona">Alicja Cmiel</a></div>
+    </footer>
 </body>
+
 </html>
