functionality almost finished

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <ul class="mainSlider">
         <li><a class="grey" href='#main' data-id="0" data-name="main" data-nameR="mainR">Main</a></li>
         <li><a class="grey" href='#skills' data-id="1" data-name="skills" data-nameR="skillsR">Skills</a></li>
-        <li><a class="grey" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a></li>
+        <li><a class="grey" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a>
+        </li>
         <li><a class="grey" href='#career' data-id="3" data-name="career" data-nameR="careerR">Career</a></li>
         <li><a class="grey" href='#exit' data-id="4" data-name="exit" data-nameR="exitR">Exit</a></li>
     </ul>
@@ -100,8 +101,8 @@
                 </div>
                 <div id='exitR'>
                     <p class="black">[dawid.igor.sawczuk@gmail.com]</p>
-                    <p class="black">[Link]</p>
-                    <p class="black">[Link]</p>
+                    <p class="black"><a target="_blank" href="https://linkedin.com/in/dawid-sawczuk">[Link]</a></p>
+                    <p class="black"><a target="_blank" href="https://github.com/dawidsawczuk">[Link]</a></p>
                 </div>
             </section>
 
