--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
                     it.</p>
                 </div>
                 <div id="html">
-                    <p>System's got basic knowledge of HTML</p>
+                    <p>System's got basic knowledge of HTML.</p>
                 </div>
                 <div id="css">
-                    <p>System's got basic knowledge of CSS</p>
+                    <p>System's got basic knowledge of CSS.</p>
                 </div>
                 <div id="cl">
                     <p>Life-changing course that finally put DawidSawczuk
