Code cleaning and minor changes in html

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                         <br/>
                         -New Technologies
                         <br/>
+                        -Games
+                        <br/>
                         -Electronics and tinkering with stuff
                         <br/>
                         -Robotics
@@ -158,8 +160,10 @@
                 </div>
                 <div id="symfony">
                     <p>Symfony2 is System's main PHP framework to work with.
-                    <br/>DawidSawczuk's final CodersLab project(see <a target="_blank" href="https://github.com/dawidsawczuk/">GitHub</a>) is made entirely
-                    in Symfony and is under constant development.</p>
+                        <br/>DawidSawczuk's final CodersLab project(see <a target="_blank"
+                                                                           href="https://github.com/dawidsawczuk/">GitHub</a>)
+                        is made entirely
+                        in Symfony and is under constant development.</p>
                 </div>
                 <div id="mysql">
                     <p>INSERT INTO DawidSawczuk (DawidSawczukCPU) VALUES ('MySQL Skills');</p>
@@ -169,7 +173,7 @@
                 </div>
                 <div id="jquery">
                     <p>System's got pretty decent jQuery skills and likes to work with
-                    it.</p>
+                        it.</p>
                 </div>
                 <div id="html">
                     <p>System's got basic knowledge of HTML.</p>
@@ -190,7 +194,7 @@
                 <div id="pader">
                     <p>System's last official education. DawidSawczuk finished
                         International Baccalaureate and decided to pursue
-                    future education on it's own.</p>
+                        future education on it's own.</p>
                 </div>
                 <div id="henderson">
                     <p>System's dabble in the hospitality industry.
