--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>BIOS</title>
+    <meta name="theme-color" content="#00FFFF" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/app.js" type="text/javascript"></script>
 </head>
@@ -13,11 +16,11 @@
     <header class="header"> DawidSawczuk Setup Utility </header>
     <nav class="menu">
         <ul class="mainSlider">
-            <li><a class="grey" href='#main' data-id="0" data-name="main" data-nameR="mainR">Main</a></li>
-            <li><a class="grey" href='#skills' data-id="1" data-name="skills" data-nameR="skillsR">Skills</a></li>
-            <li><a class="grey" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a></li>
-            <li><a class="grey" href='#career' data-id="3" data-name="career" data-nameR="careerR">Career</a></li>
-            <li><a class="grey" href='#exit' data-id="4" data-name="exit" data-nameR="exitR">Exit</a></li>
+            <li><a class="grey menu-item" href='#main' data-id="0" data-name="main" data-nameR="mainR">Main</a></li>
+            <li><a class="grey menu-item" href='#skills' data-id="1" data-name="skills" data-nameR="skillsR">Skills</a></li>
+            <li><a class="grey menu-item" href='#education' data-id="2" data-name="education" data-nameR="educationR">Education</a></li>
+            <li><a class="grey menu-item" href='#career' data-id="3" data-name="career" data-nameR="careerR">Career</a></li>
+            <li><a class="grey menu-item" href='#exit' data-id="4" data-name="exit" data-nameR="exitR">Exit</a></li>
         </ul>
     </nav>
     <div class="main">
@@ -64,7 +67,7 @@
                     <div id='mainR'>
                         <p class="black">[Dawid Sawczuk]</p>
                         <p class="black">[11/11/1993]</p>
-                        <p class="black margin">[Junior Back-End Developer]</p>
+                        <p class="black margin marginP">[Junior Back-End Developer]</p>
                         <!-- / -->
                         <p class="black">[Enabled]</p>
                         <p class="black">[Enabled]</p>
@@ -91,7 +94,7 @@
                         <p class="black">[Co-Owner]</p>
                     </div>
                     <div id='exitR'>
-                        <p class="black">[dawid.igor.sawczuk@gmail.com]</p>
+                        <p class= "mail"><a class="black" href="mailto:dawid.igor.sawczuk@gmail.com">[dawid.igor.sawczuk@gmail.com]</a></p>
                         <p class="black">[Link]</p>
                         <p class="black">[Link]</p>
                     </div>
@@ -169,7 +172,7 @@
         <div class="arrows">← → <span>Select Menu</span></div>
         <div class="icon">Enter <span>Select</span></div>
         <div class="icon">Esc <span>Exit</span></div>
-        <div class="copyright">&copy; <a target="_blank" href="https://github.com/dawidsawczuk/">Dawid Sawczuk</a> & <a target="_blank" href="https://github.com/Szona">Alicja Cmiel</a></div>
+        <div class="copyright">&copy; <a class="link" target="_blank" href="https://github.com/dawidsawczuk/">Dawid Sawczuk</a> & <a class="link" target="_blank" href="https://github.com/Szona">Alicja Cmiel</a></div>
     </footer>
 </body>
 
